[package]
name = "tarkine"
version = "0.1.0"
edition = "2021"
authors = ["Tom Watson"]
repository = "https://github.com/fridgeseal/tarkine"
description = "An experimental foray into 'percolation query' style text search and thread-per-core architecture "
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { version = "0.6.9", features = ["uuid"] }
chrono = { version = "0.4.22", features = ["serde"] }
fst = { version = "0.4.7", features = ["levenshtein"] }
futures = "0.3.24"
futures-lite = "1.12.0"
fuzzy-matcher = "0.3.7"
glommio = "0.7.0"
itertools = "0.10.5"
rand = { version = "0.8.5" }
rkyv = { version = "0.7.39", features = ["uuid_std", "uuid", "validation"] }
sled = { version = "0.34.7", features = ["compression", "io_uring", "miri_optimizations"] }
smartstring = "1.0.1"
unicode-segmentation = "1.10.0"
url = { version = "2.3.1", features = ["serde"] }
# uuid = { version = "1.1.2", features = ["zerocopy", "v4", "v5", "serde"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "net", "tracing"] }
axum = { version = "0.5.16", default-features = false, features = ["http1", "json", "http2", "macros", "matched-path", "tower-log"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
flashmap = "0.1.0"
tachyonix = "0.1.1"
thiserror = "1.0.37"
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.2"
